# STIXCore

./: .codespellrc  .coveragerc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  MANIFEST.in  README.rst  azure-pipelines.yml  processed.sqlite  processing_history.sqlite  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  end2end.yml  end2end_build.yml  end2end_run.yml
docs/: Makefile  conf.py  developers.rst  idb_versioning.rst  index.rst  pipelineconfiguration.rst  users.rst
docs/code_ref/: calibration.rst  datetime.rst  ephemeris.rst  idb.rst  index.rst  io.rst  processing.rst  products.rst  soop.rst  stixcore.rst  testdata.rst  tmtc.rst  util.rst
stixcore/: __init__.py  aspect_burst.py  ddpd.py  testEnd2End.py  version_conf.py
stixcore/calibration/: compression.py  ecc_post_fit.py  elut_manager.py  energy.py  grid.py  livetime.py  transmission.py  visibility.py  visibilty.py
stixcore/calibration/tests/: test_compression.py  test_elut_manager.py  test_energy.py  test_grid.py  test_livetime.py  test_transmission.py
stixcore/config/: config.py  data_types.py  reader.py
stixcore/config/tests/: test_config.py  test_instrument_config.py  test_reader.py
stixcore/data/: stixcore.ini  test.py
stixcore/data/idb/: idbVersionHistory.json
stixcore/data/idb/v2.26.34/: idb.sqlite
stixcore/data/publish/: rid_lut.scv
stixcore/data/test/: ddpd.in.csv  stixcore.ini
stixcore/data/test/ecc/: ECC_para.fits  ecc_conf_index.json  spec_all_erg.fits
stixcore/data/test/ephemeris/: naif0012.tls  solo_ANC_soc-flown-att_20200210-20200214_V01.bc  solo_ANC_soc-orbit_20200210-20301120_L016_V2_00025_V01.bsp  solo_ANC_soc-sclk_20200922_V01.tsc  solo_ANC_soc-stix-ik_V02.ti  test_position_20201001_V01.mk
stixcore/data/test/idb/: idbVersionHistory.json
stixcore/data/test/idb_force/: idb.sqlite
stixcore/data/test/products/: solo_L0_stix-ql-LightCurve_0664070400_V01.fits  solo_L0_stix-ql-lightcurve_0664070400_V01.fits  solo_L0_stix-ql-lightcurve_0664156800_V01.fits  solo_L1_stix-hk-maxi_20210612_V01.fits  solo_L1_stix-hk-maxi_20210613_V01.fits  solo_L1_stix-hk-maxi_20210614_V01.fits  solo_L1_stix-hk-maxi_20210615_V01.fits  solo_L1_stix-ql-LightCurve_20210117_V01.fits  solo_L1_stix-ql-lightcurve_20210116_V01.fits  solo_L1_stix-ql-lightcurve_20210117_V01.fits  solo_LB_stix-21-6-21_0000000000-9999999999_V02_2312148821-53879.fits  solo_LB_stix-21-6-24_0000000000-9999999999_V02_2402021788-59493.fits  solo_LB_stix-21-6-30_0664156800_V01.fits
stixcore/data/test/publish/: rid_lut.csv  update_rid_lut.csv
stixcore/data/test/soop/: LTP04_Jun2021-Sep2021.2575.all.json  SSTX_observation_timeline_export_M03_V05.json  SSTX_observation_timeline_export_M04_V01.json  SSTX_observation_timeline_export_M05_V01.json
stixcore/datetime/: __init__.py  datetime.py
stixcore/datetime/tests/: test_datetime.py
stixcore/ecc/: manager.py
stixcore/ecc/tests/: test_ecc_manager.py
stixcore/ephemeris/: manager.py
stixcore/ephemeris/tests/: test_manager.py  test_position.py  test_time.py  test_time_conv.py
stixcore/ephemeris/tests/data/: test_20201001_V01.mk
stixcore/idb/: createIdb.sql  idb.py  manager.py  updateIdb.sql
stixcore/idb/tests/: test_idb.py  test_manager.py
stixcore/imaging/: em.py
stixcore/io/: FlareListManager.py  FlareListProductsStorage.py  ProcessingHistoryStorage.py  RidLutManager.py  elut.py
stixcore/io/fits/: processors.py
stixcore/io/soc/: manager.py
stixcore/io/tests/: test_elut.py  test_rid_lut_manager.py  test_soc_manager.py
stixcore/processing/: AspectANC.py  FLtoFL.py  FLtoL3.py  FlareListANC.py  FlareListL3.py  L0toL1.py  L1toL2.py  LBtoL0.py  LL.py  SingleStep.py  TMTCtoLB.py  TMtoLL01.py  __init__.py  ax_gu_processing.py  decompression.py  engineering.py  find.py  level0.py  level1.py  levelb.py  packetstoLB.py  pipeline.py  pipeline_cli.py  pipeline_cron.py  pipeline_daily.py  pipeline_monitor.py  pipeline_status.py  publish.py  sswidl.py  stix-pipeline  stix-pipline
stixcore/processing/tests/: test_end2end.py  test_ll01.py  test_pipline.py  test_processing.py  test_publish.py  test_sswidl.py
stixcore/products/: __init__.py  common.py  product.py  quicklook.py
stixcore/products/ANC/: aspect.py  flarelist.py
stixcore/products/CAL/: energy.py
stixcore/products/level0/: housekeeping.py  housekeepingL0.py  quicklook.py  quicklookL0.py  science.py  scienceL0.py
stixcore/products/level1/: housekeeping.py  housekeepingL1.py  quicklook.py  quicklookL1.py  science.py  scienceL1.py
stixcore/products/level2/: housekeepingL2.py  quicklookL2.py  scienceL2.py
stixcore/products/level3/: flarelist.py  flarelistproduct.py
stixcore/products/levelb/: binary.py
stixcore/products/lowlatency/: quicklookLL.py
stixcore/products/tests/: test_bsd.py  test_factory.py  test_housekeeping.py  test_quicklook.py  test_scaling.py
stixcore/soc/: manager.py
stixcore/soc/tests/: test_manager.py  test_soc_manager.py
stixcore/soop/: manager.py
stixcore/soop/tests/: test_soop_manager.py
stixcore/spice/: manager.py
stixcore/spice/tests/: test_time_conv.py
stixcore/tests/: test_instrument_config.py
stixcore/time/: __init__.py  datetime.py  time.py
stixcore/time/tests/: test_datetime.py
stixcore/tmtc/: __init__.py  packet_factory.py  packets.py  parameter.py  parser.py
stixcore/tmtc/tc/: __init__.py  tc_6.py
stixcore/tmtc/tests/: test_packet_factory.py  test_packets.py  test_parser.py
stixcore/tmtc/tm/: __init__.py  tm_1.py  tm_17.py  tm_21.py  tm_22.py  tm_236.py  tm_237.py  tm_238.py  tm_239.py  tm_3.py  tm_5.py  tm_6.py
stixcore/util/: logging.py  singleton.py  util.py
stixcore/util/scripts/: COMPONENT_STORAGE.md  SKYCOORD_FITS_SERIALIZATION.md  SUMMARY.md  aspect_burst.py  daily_comparison.py  ddpd.py  end2end_testing.py  find_unprocessed_tm.py  idb_history.py  incomplete_twins_fits.py  index.py  integration.py  rebuild_hook.cgi  skycoord.py  stix-pipeline.service  testEnd2End.py  timecolumn.py
stixcore/util/tests/: test_logging.py
(+142 files in other folders)
