[metadata]
name = stixcore
author = STIX Team
author_email =
license = BSD 3-Clause
license_file = LICENSE.rst
url =
description = STIX Core Utilities
long_description = file: README.rst

[options]
include_package_data = True
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
    bitstring
    hissw
    intervaltree
    numpy
    matplotlib
    paramiko
    polling2
    python-dateutil
    pyyaml
    roentgen
    scp
    spiceypy
    sunpy>=4.0.1
    watchdog==6.0.0
    requests



[options.entry_points]
console_scripts =
    stix-pipeline-status = stixcore.processing.pipeline_status:main
    stix-pipeline-monitor = stixcore.processing.pipeline_monitor:main
    stix-pipeline = stixcore.processing.pipeline:main
    stix-pipeline-cli = stixcore.processing.pipeline_cli:main
    stix-publish = stixcore.processing.publish:main


[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
    pytest-xdist
docs =
    sphinx
    sphinx-automodapi
    towncrier
    sunpy-sphinx-theme

[options.package_data]
stixcore = data/*

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100

[tool:pytest]
testpaths = "stixcore" "docs"
doctest_plus = enabled
text_file_format = rst
addopts =
    --doctest-rst
    --strict-markers
remote_data_strict = False
rsyncdirs = stixcore/data
filterwarnings =
    ignore:Matplotlib is currently using agg:UserWarning
markers =
    end2end

[isort]
balanced_wrapping = True
skip=docs/conf.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf
known_first_party = stixcore
length_sort = False
length_sort_sections=stdlib
line_length = 100
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
honor_noqa = True

[coverage:run]
omit =
  stixcore/_sunpy_init*
  stixcore/conftest.py
  stixcore/*setup_package*
  stixcore/tests/*
  stixcore/*/tests/*
  stixcore/extern/*
  stixcore/version*
  */stixcore/_sunpy_init*
  */stixcore/conftest.py
  */stixcore/*setup_package*
  */stixcore/tests/*
  */stixcore/*/tests/*
  */stixcore/extern/*
  */stixcore/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
